# picom

./: meson_options.txt
src/: atom.c  atom.h  c2.c  common.h  config.c  config.h  config_libconfig.c  err.h  event.c  file_watch.c  log-internal.h  log.c  log.h  meson.build  meta.h  module.c  module.h  opengl.c  opengl.h  options.c  options.h  picom.c  picom.h  picom.modulemap  picom_assert.h  region.h  render.c  stacktrace.c  stacktrace.h  types.h  utils.h  win.c  win.h  win_defs.h  x.c  x.h  xrescheck.c
src/backend/: backend.c  backend.h  backend_common.c  backend_common.h  driver.c  driver.h
src/backend/dummy/: dummy.c
src/backend/gl/: gl_common.c  gl_common.h  glx.c  glx.h
src/backend/xrender/: xrender.c  xrender.h
src/compton-compat/: common.h  meson.build  opengl.c  opengl.h  render.c  render.h
src/module/: meson.build
src/module/backend/: module.c
src/module/blur/: blur-gl.c  blur-xrender.c  blur.h  cfg_mod.h  cfg_win.h  module.c
src/module/dbus/: cfg_mod.h  dbus.c  dbus.h  module.c
src/module/fade/: module.c
src/module/fading/: module.c
src/module/filter/: module.c
src/module/shadow/: module.c
src/module/trans/: module.c
src/module/transparency/: module.c
src/utils/: cache.c  cfg.c  cfg.h  kernel.c  kernel.h  list.h  meson.build  meta.h  string_utils.c  string_utils.h  utils.c  utils.h
subprojects/test.h/: test.h
